--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -15,7 +15,7 @@
 
   }
   ul{
-    border: solid 3px black;
+    text-align: center;
     padding-right: 1.7rem;
     line-height: 2rem;
   }
@@ -31,9 +31,6 @@
 
 
 <ul *ngIf="data$ | async as data; else empty">
-  <li *ngFor="let employee of data">{{ employee.id }}: {{ employee.name }}: {{employee.email}}</li>
+  <li *ngFor="let employee of data">{{ employee.id }}: {{ employee.name }}</li>
 </ul>
-
-<ng-template #empty>
-  ] </ng-template>
-
+<ng-template #empty>There is no data</ng-template>
