--- a/src/app/ui/faces/faces.component.html
+++ b/src/app/ui/faces/faces.component.html
@@ -1,7 +1,9 @@
 <div *ngFor="let employee of data$ | async" style="display: inline-block; margin:10px;">
   <img style="width:200px" [src]="employee.image" alt="Employee foto">
   <br>
+  <p style="text-align: center">
   {{employee.name}}
+  </p>
 </div>
 
 
