Feat: Name align center

--- a/src/app/ui/faces/faces.component.html
+++ b/src/app/ui/faces/faces.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let employee of data$ | async" style="display: inline-block; margin:10px;">
-  <img style="width:200px" [src]="employee.image" alt="Employee foto">
+  <img style="width:200px" [src]="employee.image" alt="Employee-photograph">
   <br>
-  <p style="text-align: center">
+  <p style="text-align: center; font-weight: bold">
   {{employee.name}}
   </p>
 </div>
