--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -31,6 +31,6 @@
 
 
 <ul *ngIf="data$ | async as data; else empty">
-  <li *ngFor="let employee of data">{{ employee.id }}: {{ employee.name }}</li>
+  <li *ngFor="let employee of data">{{ employee.personalNumber }}: {{ employee.name }}</li>
 </ul>
 <ng-template #empty>There is no data</ng-template>
