--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -1,4 +1,4 @@
-<h1>Employee list</h1>
+<h1>Project List</h1>
 
 <style>
 
@@ -31,6 +31,7 @@
 
 
 <ul *ngIf="data$ | async as data; else empty">
-  <li *ngFor="let employee of data">{{ employee.personalNumber }}: {{ employee.name }}</li>
+  <li *ngFor="let employee of data">{{ employee.name }}: {{ employee.owner}}: {{ employee.description }}</li>
 </ul>
 <ng-template #empty>There is no data</ng-template>
+
