--- a/src/app/ui/faces/faces.component.html
+++ b/src/app/ui/faces/faces.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let employee of data$ | async" style="display: inline-block; margin:10px;">
-  <img style="width:200px" [src]="employee.img" alt="Employee-photograph">
+  <img style="width:200px" [src]="employee.id" alt="Employee-photograph">
 
 </div>
 
